--- a/main.html
+++ b/main.html
@@ -10,7 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg">
+     <h1>Manoj</h1>
+	<a href=" https://www.linkedin.com/comm/feed/?lipi=urn%3Ali%3Apage%3Aemail_email_job_alert_digest_01%3Bz9hfAz3QQK288vYeI3EOsQ%3D%3D&midToken=AQFHpakjYcSHcQ&midSig=3r0xCv09QDgqE1&trk=eml-email_job_alert_digest_01-header-0-home_glimmer&trkEmail=eml-email_job_alert_digest_01-header-0-home_glimmer-null-dpfqrb~ldzn7872~n4-null-null&eid=dpfqrb-ldzn7872-n4">Linkedin</a>
+  <section id="skills">
+	  <div>
+		  <h3>skills</h3>
+	  <ol>
+		  <li>coding skills</li>
+		  <li>communication skills</li>
+	  </ol>
+	  </div>
+  </section>
+	<section id="projects">
+	  <div>
+		  <h3>projects</h3>
+	  <ul>
+		  <li>coding skills</li>
+		  <li>communication skills</li>
+	  </ul>
+	  </div>
+  </section>
 </body>
 
 </html>
